--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@arcaelas/utils": "^2.0.5",
-    "baileys": "^6.7.18"
+    "baileys": "^6.7.18",
+    "node-cache": "^5.1.2"
   }
 }
