--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     },
     "devDependencies": {
         "@types/node": "^24.1.0",
+        "@types/qrcode": "^1.5.6",
         "esbuild": "^0.17.18",
         "typescript": "^5.0.4"
     },
@@ -50,6 +51,7 @@
         "@arcaelas/dynamite": "^1.0.9",
         "@arcaelas/utils": "^2.0.5",
         "baileys": "^6.7.18",
-        "node-cache": "^5.1.2"
+        "node-cache": "^5.1.2",
+        "qrcode": "^1.5.4"
     }
 }
