--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,27 @@
 {
-  "include": ["src/**/*"],
-  "compilerOptions": {
-    "target": "esnext",
-    "module": "commonjs",
-    "moduleResolution": "node",
-    "baseUrl": "./",
-    "paths": { },
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "noImplicitAny": false,
-    "skipLibCheck": true,
-    "outDir": "./build",
-    "declaration": true,
-    "sourceMap": true,
-    "resolveJsonModule": true,
-    "experimentalDecorators": true,
-    "emitDecoratorMetadata": true,
-    "downlevelIteration": true,
-    "lib": ["ES2022", "DOM"],
-    "allowSyntheticDefaultImports": true,
-    "useDefineForClassFields": false,
-    "strictPropertyInitialization": false
-  },
-  "exclude": ["node_modules", "**/*.test.ts"]
+    "include": ["src/**/*", "_src/**/*"],
+    "compilerOptions": {
+        "target": "esnext",
+        "module": "commonjs",
+        "moduleResolution": "node",
+        "baseUrl": "./",
+        "paths": {},
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "noImplicitAny": false,
+        "skipLibCheck": true,
+        "outDir": "./build",
+        "declaration": true,
+        "sourceMap": true,
+        "resolveJsonModule": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
+        "downlevelIteration": true,
+        "lib": ["ES2022", "DOM"],
+        "allowSyntheticDefaultImports": true,
+        "useDefineForClassFields": false,
+        "strictPropertyInitialization": false
+    },
+    "exclude": ["node_modules", "**/*.test.ts"]
 }
