--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     },
     "dependencies": {
         "@arcaelas/dynamite": "^1.0.9",
+        "@aws-sdk/client-s3": "^3.958.0",
         "@arcaelas/utils": "^2.0.5",
         "baileys": "^6.7.18",
         "node-cache": "^5.1.2",
