feat: add MkDocs documentation and refactor core API
Complete rewrite of WhatsApp, Chat, Contact, and Message classes
using factory pattern with context binding. Added comprehensive
MkDocs documentation with examples and API reference.

Changes:
- Simplify store engine to FileEngine only
- Remove MemoryEngine and S3Engine drivers
- Add docs/ with getting started, installation, examples
- Add mkdocs.yml for documentation site
- Update .gitignore for testing files

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,14 @@
 # Credentials
 .env
 .baileys
+
+# Testing files
+test.ts
+src/_test*.ts
+src/_index.ts
+
+# MkDocs build
+site/
 .env.*
 !.env.example
 serverless.yml
