docs: fix API documentation to match actual implementation
- Replace wa.on() with wa.event.on() for event handling
- Fix Message API: wa.Message.text() instead of wa.Message.Message.text()
- Remove non-existent subclasses (Message.Text, Message.Image, etc.)
- Use msg.type property instead of instanceof checks
- Fix static vs instance methods (react, seen, forward are static)
- Update poll options: use 'options' array not 'items'
- Remove non-existent constructor options (sync, online)
- Remove references to MemoryEngine and S3Engine (only FileEngine exists)
- Update Engine from abstract class to interface
- Fix all code examples across references and tutorials

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,7 +72,7 @@ nav:
   - Ejemplos:
     - Bot Basico: examples/basic-bot.md
     - Bot de Comandos: examples/command-bot.md
-    - Bot con Persistencia S3: examples/s3-bot.md
+    - Bot con Engine Personalizado: examples/s3-bot.md
     - Envio de Media: examples/media.md
     - Gestion de Grupos: examples/groups.md
     - Encuestas: examples/polls.md
