--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
         "@arcaelas/utils": "^2.0.5",
         "@aws-sdk/client-s3": "^3.958.0",
         "@hapi/boom": "^10.0.1",
-        "baileys": "^6.7.18",
+        "baileys": "6.7.18",
         "node-cache": "^5.1.2",
         "pino": "^10.1.0",
         "pino-pretty": "^13.1.3",
