--- a/package.json
+++ b/package.json
@@ -38,22 +38,25 @@
     "scripts": {
         "build": "tsc && node esbuild.js",
         "prepublishOnly": "yarn build && npm version patch",
-        "commit": "npm publish --access=public",
+        "publish": "npm publish --access=public",
+        "lint": "eslint src/",
+        "lint:fix": "eslint src/ --fix",
         "postpublish": "rm -rf build"
     },
     "devDependencies": {
+        "@eslint/js": "^9.0.0",
         "@types/node": "^25.0.3",
         "@types/qrcode": "^1.5.6",
         "esbuild": "^0.17.18",
-        "typescript": "^5.0.4"
+        "eslint": "^9.0.0",
+        "typescript": "^5.0.4",
+        "typescript-eslint": "^8.0.0"
     },
     "dependencies": {
         "@arcaelas/dynamite": "^1.0.9",
         "@arcaelas/utils": "^2.0.5",
-        "@aws-sdk/client-s3": "^3.958.0",
         "@hapi/boom": "^10.0.1",
         "baileys": "6.7.18",
-        "node-cache": "^5.1.2",
         "pino": "^10.1.0",
         "pino-pretty": "^13.1.3",
         "qrcode": "^1.5.4"
